# leap

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: project-map.md  slack-and-ide.md
.claude/skills/: add-cli-provider.md  feature-patterns.md  pr-tracking-internals.md
dev/tasks/linux-compatibility/: .spec-driven  plan.md  requirements.md
dev/tasks/linux-compatibility/subtasks/: 1_pyproject-markers.md  2_pyobjc-import-guards.md  (+6 more)
src/leap/: main.py
src/leap/cli_providers/: base.py  claude.py  codex.py  cursor_agent.py  gemini.py  registry.py
src/leap/client/: image_handler.py
src/leap/monitor/: app.py  navigation.py  scm_polling.py  server_launcher.py  sleep_guard.py
src/leap/server/: server.py  state_tracker.py
src/leap/utils/: atomic_write.py  claude_session_move.py  cursor_session_move.py  gemini_session_move.py  menu.py  relocation.py  resume_store.py
src/scripts/: _leap  configure-shell-helper.sh  configure_iterm2_csi_u.py  configure_wezterm_csi_u.py  install-monitor-linux.sh  leap-codesign-setup.sh  leap-hook.sh  leap-main.sh  leap-resume.py  leap-select.sh  leap-update.sh  migrate-from-claudeq.sh  sed-inplace.sh  setup-slack-app.sh  uninstall-helper.sh  uninstall-monitor-linux.sh
tests/integration/: fake_claude_menu_cli.py  test_dialog_answer_leak_protection.py  test_escape_race.py  test_signal_transitions.py
tests/unit/: test_claude_select_option.py  test_claude_session_move.py  test_clipboard_platform.py  test_gitlab_provider.py  test_hooks_installed.py  test_menu_options.py  test_navigation_platform.py  test_platform_imports.py  test_pyproject_markers.py  test_resume.py  test_shell_config.py  test_sleep_guard_platform.py  test_state_tracker.py
(+21 files in other folders)
