[project]
name = "leap"
version = "1.0.0"
description = "Multi-session AI CLI manager with message queueing and image support"
authors = [{name = "Nevo Mashiach"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/nevo24/leap"
Repository = "https://github.com/nevo24/leap"

[project.scripts]
claudel = "leap.main:main"
leap-server = "leap.server.server:main"
leap-client = "leap.client.client:main"
leap-monitor = "leap.monitor.app:main"
leap-slack = "leap.slack.bot:main"

[tool.poetry.dependencies]
python = "^3.11"
pexpect = "^4.8.0"
prompt-toolkit = "^3.0.0"
gnureadline = {version = "^8.1.2", markers = "sys_platform == 'darwin'"}
wcwidth = "^0.6.0"
rich = "^14.3.2"
pyobjc-framework-cocoa = {version = "^12.1", markers = "sys_platform == 'darwin'"}
pyobjc-framework-applicationservices = {version = "^12.1", markers = "sys_platform == 'darwin'"}
pyobjc-framework-quartz = {version = "^12.1", markers = "sys_platform == 'darwin'"}
pyte = "^0.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.poetry.group.monitor.dependencies]
PyQt5 = "^5.15.0"
python-gitlab = "^8.0.0"
PyGithub = "^2.0"
py2app = {version = "^0.28", markers = "sys_platform == 'darwin'"}

[tool.poetry.group.slack]
optional = true

[tool.poetry.group.slack.dependencies]
slack-bolt = "^1.18"
slack-sdk = "^3.27"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning:pty"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
